--- a/style.css
+++ b/style.css
@@ -120,3 +120,76 @@
     position: absolute;
     z-index: 1;
 }
+
+.contentright img {
+    top: 10%;
+    left: 25%;
+    position: absolute;
+}
+
+.produtsdetails {
+    bottom: 10%;
+    left:10%;
+    position: absolute;
+    margin-bottom: 20px;
+}
+
+.pricebox {
+    display: flex;
+    width: 170px;
+    height: 150px;
+    align-items: center;
+    box-shadow: -40px 0 20px -40px , rgba(189,189,189,0.5);
+}
+
+.price {
+    flex-basis: 70%;
+}
+
+.price h2 {
+    margin-left: 20px;
+    color: #999;
+    font-size: 22px;
+}
+
+.price h1 {
+    margin-left:20px;
+    margin-bottom: 10px;    
+}
+
+.price h3 {
+    margin-left: 20px;
+    color: #ccc;
+}
+
+.variant {
+    flex-basis: 30%;
+    text-align: center;
+}
+
+.variant div {
+    width: 13px;
+    height:13px;
+    margin: 5px auto;
+}
+
+.variant div:nth-child(1) {
+    background-color: blue;
+    transform: scale(1.2);
+}
+
+.variant div:nth-child(2) {
+    background-color: red;
+}
+
+.variant div:nth-child(3) {
+    background-color: lime;
+}
+
+.variant div:nth-child(4) {
+    background-color: #999;
+}
+
+.variant div:nth-child(5) {
+    background-color:#000;
+}
