--- a/style.css
+++ b/style.css
@@ -193,3 +193,26 @@
 .variant div:nth-child(5) {
     background-color:#000;
 }
+
+.produtsdetails P {
+    text-align: center;
+    color: #999;
+    font: size 13px;
+}
+
+.social {
+    bottom:-120px;
+    right: -110px;
+    position: absolute;
+    transform: rotate(-90deg);
+}
+
+.social ul li {
+    list-style: none;
+    margin: 20px 15px;display: inline-block;
+}
+
+.social ul li a {
+    text-decoration: none;
+    color: #999;
+}
